[package]
name = "zookeeper-async"
version = "2.0.0"
authors = ["Kamil Rojewski <kamil.rojewski@gmail.com>", "Nandor Kracser <bonifaido@gmail.com>"]
license = "MIT"
homepage = "https://github.com/krojew/rust-zookeeper"
repository = "https://github.com/krojew/rust-zookeeper"
description = "An async ZooKeeper client"
readme = "README.md"
keywords = ["zk", "zookeeper", "distributed", "coordination", "async"]
edition = "2018"

[dependencies]
async-trait = "0.1"
byteorder = "1.3"
bytes = "0.5"
derive_more = "0.99"
futures = "0.3"
lazy_static = "1.4"
num_enum = "0.5"
snowflake = "1.3.0"
tokio = { version = "0.2", features = ["rt-threaded", "sync", "tcp", "time", "io-util", "macros"] }
tracing = "0.1"
uuid = { version = "0.8", features = ["std", "v4"] }

[dev-dependencies]
env_logger = "0.7"

[features]
unstable = []
