[package]
name = "zookeeper-zk"
version = "0.7.1"
authors = ["yansen.zk <yangsen.zk@qq.com>", "Nandor Kracser <bonifaido@gmail.com>"]
license = "MIT"
homepage = "https://github.com/yangsenzk/rust-zookeeper"
repository = "https://github.com/yangsenzk/rust-zookeeper"
documentation = "https://github.com/yangsenzk/rust-zookeeper"
description = "A minimal ZooKeeper client"
readme = "README.md"
keywords = ["zk", "zookeeper", "distributed", "coordination"]
edition = "2021"

[dependencies]
byteorder = "1.2"
bytes = "0.5"
lazy_static = "1.0"
log = "0.4"
mio = "0.6"
mio-extras = "2"
snowflake = "1.0.0"
zookeeper_derive = { path = "zookeeper-derive", version = "0.4.1" }

[dev-dependencies]
env_logger = "0.7"
uuid = { version = "0.8.1", features = ["v4"] }

[features]
unstable = []

[[test]]
name = "test"
path = "tests/test.rs"
