[package]
name = "zookeeper_derive"
version = "0.3.0"
authors = ["Travis Gockel <travis@gockelhut.com>"]
license = "MIT"
description = "Derive implementations used to build the ZooKeeper library"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.3"
syn = "0.14.4"
#proc-macro2 = { version = "0.4", features = ["nightly"] }
