[package]
name = "zookeeper_derive"
version = "0.4.1"
authors = ["Travis Gockel <travis@gockelhut.com>"]
license = "MIT"
description = "Derive implementations used to build the ZooKeeper library"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = "1"
#proc-macro2 = { version = "0.4", features = ["nightly"] }
